# braillix

./: Cargo.toml  README.md
braillix/: Cargo.toml  README.md
braillix/examples/: fmt.rs  gradient.rs
braillix/src/: canvas.rs  display.rs  lib.rs
braillix/src/canvas/: coords.rs  dither.rs  geometry.rs  style.rs
braillix_ratatui/: Cargo.toml  README.md
braillix_ratatui/examples/: canvas_rotating_triangle.rs  dither_cutout.rs  rotating_triangle.rs
braillix_ratatui/src/: animation.rs  lib.rs
