[workspace]
resolver = "2"
members = [
    "braillix",
    "braillix_ratatui",
]

[workspace.package]
version = "0.2.0"
authors = ["Micah Johnson <micahjohnson721@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mcjo163/braillix"
categories = ["graphics", "rendering", "visualization"]
